--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="container">
+		<h1>PROJETO GITHUB</h1>
+		<div class="bolinha1"></div>
+		<div class="bolinha2"></div>
+		<div class="bolinha3"></div>
+	</div>
 </body>
 </html>
